Fix local font loading for PDF generation, align email icon, and remove pre-generated CV pdf

--- a/media/abletterer-print.css
+++ b/media/abletterer-print.css
@@ -6,38 +6,44 @@
 @font-face {
     font-family: "Montserrat";
     src: url("fonts/Montserrat-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
     font-display: swap;
 }
 
+
 @font-face {
     font-family: "Montserrat";
-    src: url("fonts/Montserrat-SemiBold.ttf");
+    src: url("fonts/Montserrat-SemiBold.ttf") format("truetype");
     font-weight: 600;
+    font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: "Montserrat";
-    src: url("fonts/Montserrat-SemiBold.ttf");
-    font-weight: bold;
+    src: url("fonts/Montserrat-Bold.ttf") format("truetype");
+    font-weight: 700;
+    font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: "Montserrat";
-    src: url("fonts/Montserrat-Italic.ttf");
+    src: url("fonts/Montserrat-Italic.ttf") format("truetype");
+    font-weight: 400;
     font-style: italic;
     font-display: swap;
 }
 @font-face {
     font-family: "Montserrat";
-    src: url("fonts/Montserrat-BoldItalic.ttf");
-    font-weight: bold;
+    src: url("fonts/Montserrat-BoldItalic.ttf") format("truetype");
+    font-weight: 700;
     font-style: italic;
     font-display: swap;
 }
 
 @font-face {
     font-family: "FiraCode";
-    src: url("fonts/FiraCode-Retina.ttf");
+    src: url("fonts/FiraCode-Retina.ttf") format("truetype");
     font-display: swap;
 }
 
@@ -103,7 +109,7 @@ table {
 }
 
 body {
-	font: normal normal 400 10.5pt Montserrat;
+	font: normal normal 400 10.5pt Montserrat, sans-serif;
 	line-height: 1.35em;
 	color: #000;
 	background-color: #ffffff;
@@ -201,11 +207,20 @@ h1 + p {
 
 #webaddress .contact-email {
 	font-size: 0 !important;
+	display: inline-flex;
+	align-items: center;
+	vertical-align: middle;
+}
+
+#webaddress .contact-email svg {
+	margin-right: 0.2rem;
+	vertical-align: middle;
 }
 
 #webaddress .contact-email::after {
 	content: "arnaud.bletterer@gmail.com";
 	font-size: 9.5pt !important;
+	line-height: 1;
 }
 
 
